fix(contacts): break email if too long
(cherry picked from commit ccaea4a6dd21d068854cc5af8d10b7b48b3b269f)

--- a/src/app/contacts/contacts.component.scss
+++ b/src/app/contacts/contacts.component.scss
@@ -33,7 +33,11 @@
     }
 
     dd, dt {
-      display: inline-block;
+      display: inline;
+    }
+
+    dd {
+      word-break: break-all;
     }
 
     a {
